policygen/CM-Configuration-Management/NetworkPolicy/policy-netpol-cluster-ns-allow-cluster-ns-ingress.yaml
# This policy will be replaced by AdminNetworkPolicy once
# the CNFs support OpenShift 4.16.
# The PolicyGenerators deploying this manifest by deploy
# to workload clusters only.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cluster-ns-to-cluster-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - key: example-app-namespace
            operator: DoesNotExist
